# feup-iart-proj1

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: ai_test.py  board.py  button.py  constants.py  gameState.py  gameTree.py  main.py  menu.py  minimax.py  montecarlo.py
